example/user-guides/getting-started/app-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: app.talcoding.com
      http:
        paths:
          - backend:
              serviceName: example-app
              servicePort: 8080
